[project]
name = "mcp-demo"
version = "0.1.0"
description = "A demo project related to: like how we communicate with mcp servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "langchain-groq>=0.3.5",
    "mcp-use>=1.3.6",
    "python-dotenv>=1.1.1",
]
